src/styles/index.scss
@at-root {
  :root {
    /*
  --mf-color-base: #000;
  --mf-color-text: #fff;
  --mf-color-base-invert: #fff;

  --mf-cursor-size: 48px;
  --mf-cursor-default-scale: 0.2;

  --mf-cursor-text-size: 36px;
  --mf-cursor-text-font-size: 16px;
  --mf-cursor-text-line-height: 20px;

  --mf-cursor-media-size: 400px;

  --mf-cursor-pointer-scale: 0.15;

  --mf-cursor-text-scale: 1.7;
  --mf-cursor-text-scale-active: 1.6;

  --mf-cursor-icon-scale: 1.5;
  --mf-cursor-icon-active-scale: 1.4;
  */
  }
}

.mf-cursor {
  $root: &;

  position: fixed;
  top: 0;
  left: 0;
  z-index: 250;

  direction: ltr;
  contain: layout style size;
  pointer-events: none;

  transition:
    opacity 0.3s,
    color 0.4s;

  &:before {
    content: '';
    position: absolute;
    top: calc(var(--mf-cursor-size, 48px) / 2 * -1);
    left: calc(var(--mf-cursor-size, 48px) / 2 * -1);
    display: block;
    width: var(--mf-cursor-size, 48px);
    height: var(--mf-cursor-size, 48px);
    transform: scale(var(--mf-cursor-default-scale, 0.2));

    background: currentColor;
    border-radius: 50%;

    transition:
      transform 0.25s ease-in-out,
      opacity 0.1s;
  }

  &.-inverse {
    color: var(--mf-color-base-invert, #fff);
  }

  &.-exclusion {
    @supports (mix-blend-mode: exclusion) {
      mix-blend-mode: exclusion;

      &:before {
        background: var(--mf-color-base-invert, #fff);
      }
    }
  }

  &.-pointer {
    &:before {
      transform: scale(var(--mf-cursor-pointer-scale, 0.15));
    }
  }

  &.-text {
    &:before {
      opacity: 0.85;
      transform: scale(var(--mf-cursor-text-scale, 1.7));
    }

    &.-active &:before {
      transform: scale(var(--mf-cursor-text-scale-active, 1.6));
      transition-duration: 0.2s;
    }
  }

  &.-icon {
    &:before {
      transform: scale(var(--mf-cursor-icon-scale, 1.5));
    }

    &.-active &:before {
      transform: scale(var(--mf-cursor-icon-active-scale, 1.4));
    }
  }

  &.-hidden &:before {
    transform: scale(0);
  }

  &-text {
    position: absolute;
    top: calc(var(--mf-color-text-size, 36px) / 2 * -1);
    left: calc(var(--mf-color-text-size, 36px) / 2 * -1);
    width: var(--mf-color-text-size, 36px);
    height: var(--mf-color-text-size, 36px);
    display: flex;
    align-items: center;
    justify-content: center;
    transform: scale(0) rotate(10deg);

    opacity: 0;
    color: var(--mf-color-text, #fff);

    font-size: var(--mf-color-text-font-size, 16px);
    line-height: var(--mf-color-text-line-height, 20px);
    text-align: center;

    transition:
      opacity 0.4s,
      transform 0.3s;

    #{$root}.-text &,
    #{$root}.-icon & {
      opacity: 1;
      transform: scale(1);
    }
  }

  &-media {
    position: absolute;
    width: var(--mf-cursor-media-size, 400px);
    height: var(--mf-cursor-media-size, 400px);
    margin: calc(var(--mf-cursor-media-size, 400px) / 2) 0 0
      calc(var(--mf-cursor-media-size, 400px) / 2);

    img,
    video {
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      border-radius: 50%;

      @supports (object-fit: cover) {
        position: static;
        width: 100%;
        height: 100%;
        object-fit: cover;
        transform: translateZ(0);
      }
    }

    &-box {
      position: relative;
      width: 100%;
      height: 100%;
      overflow: hidden;
      transform: scale(0) translateZ(0);
      padding: 1px;

      opacity: 0;
      border-radius: 50%;

      transition:
        transform 0.35s,
        opacity 0.2s 0.2s;

      #{$root}.-media & {
        opacity: 1;
        transform: scale(0.696);
        transition-duration: 0.4s, 0.4s;
        transition-delay: 0s, 0s;
      }
    }
  }
}

